--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required (VERSION 2.8)
 set(PROJECT jdks)
+set(CMAKE_BUILD_TYPE "Debug")
+SET(CPACK_GENERATOR "TGZ")
 
 INCLUDE (common.cmake)
+
 
