--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8)
-set(PROJECT jdks)
+set(PROJECT jdksavbapi)
 set(CMAKE_BUILD_TYPE "Debug")
 SET(CPACK_GENERATOR "TGZ")
 
